 * #949 (LowDiscrepancyExperiment for distributions having dependent copula)
 * #952 (Limitation on distribution type for polynomial chaos?)
 * #953 (RandomMixture can fail with truncated distribution)
 * #954 (CompositeProcess::getFuture() broken)
 * #957 (RandomMixture::getDispersionIndicator() takes a long time)
 * #959 (The PolygonArray and Polygon classes poorly manage the colors)

== 1.11 release (2018-05-11) == #release-1.11

=== Library ===

==== Major changes ====

==== New classes ====
 * FrechetFactory
 * Fehlberg
 * TranslationFunction
 * DomainComplement, DomainIntersection, DomainUnion, DomainDisjunctiveUnion, DomainDifference
 * SmoothedUniform
 * NearestNeighbourAlgorithm, RegularGridNearestNeighbour, NaiveNearestNeighbour, NearestNeighbour1D
 * EnclosingSimplex, EnclosingSimplexImplementation, NaiveEnclosingSimplex, RegularGridEnclosingSimplex, EnclosingSimplexMonotonic1D, BoundingVolumeHierarchy
 * IndicesCollection
 * SymbolicParserExprTk
 * EvaluationProxy
 * MemoizeFunction, MemoizeEvaluation
 * Evaluation, Gradient, Hessian
 * MeshDomain
 * NormInfEnumerateFunction
 * FunctionalChaosSobolIndices
 * P1LagrangeInterpolation
 * FilonQuadrature

==== API changes ====
 * Removed deprecated NumericalMathFunction class
 * Removed deprecated QuadraticNumericalMathFunction class
 * Removed deprecated LinearNumericalMathFunction class
 * Removed deprecated NumericalSample class
 * Removed deprecated NumericalPoint[WithDescription] class
 * Removed deprecated NumericalScalarCollection class
 * Removed deprecated NumericalComplexCollection class
 * Removed deprecated PosteriorRandomVector class
 * Removed deprecated ConditionedNormalProcess class
 * Removed deprecated ResourceMap::[SG]AsNumericalScalar methods
 * Removed deprecated SpecFunc::*NumericalScalar* constants
 * Removed deprecated PlatformInfo::GetConfigureCommandLine method
 * Removed deprecated Field::getSample method
 * Removed deprecated SobolIndicesAlgorithm::Generate method