@@ -23,10 +23,12 @@
 #include "openturns/BetaFactory.hxx"
 #include "openturns/SquareMatrix.hxx"
 #include "openturns/BetaMuSigma.hxx"
+#include "openturns/PersistentObjectFactory.hxx"
 
 BEGIN_NAMESPACE_OPENTURNS
 
 CLASSNAMEINIT(BetaMuSigma)
+static const Factory<BetaMuSigma> Factory_BetaMuSigma;
 
 /* Default constructor */
 BetaMuSigma::BetaMuSigma()
@@ -217,6 +219,24 @@ String BetaMuSigma::__str__(const String & ) const
   OSS oss(false);
   oss << getClassName() << "(mu = " << mu_ << ", sigma = " << sigma_ << ", a = " << a_ << ", b = " << b_ << ")";
   return oss;
+}
+
+void BetaMuSigma::save(Advocate & adv) const
+{
+  DistributionParametersImplementation::save(adv);
+  adv.saveAttribute( "mu_", mu_ );
+  adv.saveAttribute( "sigma_", sigma_ );
+  adv.saveAttribute( "a_", a_ );
+  adv.saveAttribute( "b_", b_ );
+}
+
+void BetaMuSigma::load(Advocate & adv)
+{
+  DistributionParametersImplementation::load(adv);
+  adv.loadAttribute( "mu_", mu_ );
+  adv.loadAttribute( "sigma_", sigma_ );
+  adv.loadAttribute( "a_", a_ );
+  adv.loadAttribute( "b_", b_ );
 }
 
 END_NAMESPACE_OPENTURNS
