@@ -23,10 +23,12 @@
 #include "openturns/SquareMatrix.hxx"
 #include "openturns/LogNormalMuSigma.hxx"
 #include "openturns/LogNormalMuSigmaOverMu.hxx"
+#include "openturns/PersistentObjectFactory.hxx"
 
 BEGIN_NAMESPACE_OPENTURNS
 
 CLASSNAMEINIT(LogNormalMuSigmaOverMu)
+static const Factory<LogNormalMuSigmaOverMu> Factory_LogNormalMuSigmaOverMu;
 
 /* Default constructor */
 LogNormalMuSigmaOverMu::LogNormalMuSigmaOverMu()
@@ -167,6 +169,22 @@ String LogNormalMuSigmaOverMu::__str__(const String & ) const
   OSS oss(false);
   oss << getClassName() << "(mu = " << mu_ << ", sigmaOverMu = " << sigmaOverMu_ << ", gamma = " << gamma_ << ")";
   return oss;
+}
+
+void LogNormalMuSigmaOverMu::save(Advocate & adv) const
+{
+  DistributionParametersImplementation::save(adv);
+  adv.saveAttribute( "mu_", mu_ );
+  adv.saveAttribute( "sigmaOverMu_", sigmaOverMu_ );
+  adv.saveAttribute( "gamma_", gamma_ );
+}
+
+void LogNormalMuSigmaOverMu::load(Advocate & adv)
+{
+  DistributionParametersImplementation::load(adv);
+  adv.loadAttribute( "mu_", mu_ );
+  adv.loadAttribute( "sigmaOverMu_", sigmaOverMu_ );
+  adv.loadAttribute( "gamma_", gamma_ );
 }
 
 END_NAMESPACE_OPENTURNS
