@@ -24,10 +24,12 @@
 #include "openturns/SquareMatrix.hxx"
 #include "openturns/SpecFunc.hxx"
 #include "openturns/WeibullMuSigma.hxx"
+#include "openturns/PersistentObjectFactory.hxx"
 
 BEGIN_NAMESPACE_OPENTURNS
 
 CLASSNAMEINIT(WeibullMuSigma)
+static const Factory<WeibullMuSigma> Factory_WeibullMuSigma;
 
 /* Default constructor */
 WeibullMuSigma::WeibullMuSigma()
@@ -251,6 +253,22 @@ String WeibullMuSigma::__str__(const String & ) const
   OSS oss(false);
   oss << getClassName() << "(mu = " << mu_ << ", sigma = " << sigma_ << ", gamma = " << gamma_ << ")";
   return oss;
+}
+
+void WeibullMuSigma::save(Advocate & adv) const
+{
+  DistributionParametersImplementation::save(adv);
+  adv.saveAttribute( "mu_", mu_ );
+  adv.saveAttribute( "sigma_", sigma_ );
+  adv.saveAttribute( "gamma_", gamma_ );
+}
+
+void WeibullMuSigma::load(Advocate & adv)
+{
+  DistributionParametersImplementation::load(adv);
+  adv.loadAttribute( "mu_", mu_ );
+  adv.loadAttribute( "sigma_", sigma_ );
+  adv.loadAttribute( "gamma_", gamma_ );
 }
 
 END_NAMESPACE_OPENTURNS
