@@ -55,6 +55,7 @@
  * #954 (CompositeProcess::getFuture() broken)
  * #957 (RandomMixture::getDispersionIndicator() takes a long time)
  * #959 (The PolygonArray and Polygon classes poorly manage the colors)
+ * #964 (Study does not load LogNormalMuSigma variables from XML)
 
 == 1.11 release (2018-05-11) == #release-1.11
 
